--- a/Setups/run58.yaml
+++ b/Setups/run58.yaml
@@ -1,9 +1,9 @@
 # Same configuration that run25 but i have changed how i use the dropout in the architecture
 
 contrastive_learning:
-  margin: 0
+  margin: 100
   type_of_triplets: 'all'
-  distance_metric: 'CosineSimilarity' # EuclideanDistance
+  distance_metric: 'LpDistance' #CosineSimilarity # EuclideanDistance
 
 epochs: 300
 batch_size: 5
@@ -19,14 +19,14 @@ momentum: 0.9
 weight_decay: 0.0001
 
 schedule_name: "MultiStepLR"
-milestones: [60, 100, 150, 200]
+milestones: [60, 100, 120, 220]
 gamma: 0.1
 # Values for the CosineAnnealingLR scheduler
 T_max: 200
 eta_min: 0.00001
 
 Tresh_distance: False
-layers_dimensions: [29, 70, 160, 340]
+layers_dimensions: [29, 40, 50, 55]
 dropout: 0.3
 mask_rate: 0.4
 concat_hidden: False
