--- a/Setups/run131.yaml
+++ b/Setups/run131.yaml
@@ -10,6 +10,9 @@ epochs: 200
 batch_size: 4
 loader: True
 
+added_features: 324 # The added features to the vector of the nodes. # angle and distance
+
+
 model_name: "class_contrastive_model" 
 optimizer: "ADAMW"
 lr: 0.001
@@ -26,22 +29,20 @@ T_max: 200
 eta_min: 0.00001
 
 Tresh_distance: False
-layers_dimensions: [9, 15, 17]
-added_features: 20
-
+layers_dimensions: [9, 400, 500] # 333 
 dropout: 0.3
 mask_rate: 0.0
 concat_hidden: False
 
 activation: "relu"
 
-pickle_path_train_kmeans: '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_Kmeans_dis_ntresh_discrete/train_Kmeans_dis_ntresh_discrete.pkl'
-pickle_path_val_kmeans: '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_Kmeans_dis_ntresh_discrete/val_Kmeans_dis_ntresh_discrete.pkl'
-pickle_path_test_kmeans: '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_Kmeans_dis_ntresh_discrete/test_Kmeans_dis_ntresh_discrete.pkl'
+pickle_path_train_kmeans: '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_TEXT_Kmeans_dis_ntresh_discrete/train_TEXT_Kmeans_dis_ntresh_discrete.pkl'
+pickle_path_val_kmeans: '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_TEXT_Kmeans_dis_ntresh_discrete/val_TEXT_Kmeans_dis_ntresh_discrete.pkl'
+pickle_path_test_kmeans: '/home/nbiescas/Desktop/CVC/CVC_internship/PKL_Graphs/V2_TEXT_Kmeans_dis_ntresh_discrete/test_TEXT_Kmeans_dis_ntresh_discrete.pkl'
 
 network: 
   checkpoint: ~
 
 features:
-  node: ['area', 'regional_encoding']
+  node: ['Geometric', 'text_feat']  
   edge: ['distance_not_tresh', 'angle', 'discrete_bin_edges', 'feat']
