--- a/Setups/run89_model_updated.yaml
+++ b/Setups/run89_model_updated.yaml
@@ -3,13 +3,14 @@
 contrastive_learning:
   margin: 0.3
   type_of_triplets: 'all'
-  distance_metric: 'LpDistance'
+  distance_metric: 'CosineSimilarity'
 
 pretrainedWeights: False
 epochs: 200
 batch_size: 4
 loader: True
 
+added_features: 2 # The added features to the vector of the nodes. # angle and distance
 model_name: "class_contrastive_model" 
 optimizer: "ADAMW"
 lr: 0.001
@@ -18,8 +19,8 @@ val_size: 0.1
 momentum: 0.9
 weight_decay: 0.0001
 
-schedule_name: "MultiStepLR"
-milestones: [100, 160]
+schedule_name: "CosineAnnealingLR"
+milestones: [600, 800]
 gamma: 0.1
 # Values for the CosineAnnealingLR scheduler
 T_max: 200
@@ -27,11 +28,10 @@ eta_min: 0.00001
 
 Tresh_distance: False
 layers_dimensions: [9, 15, 17]
-added_features: 20
-
 dropout: 0.3
 mask_rate: 0.0
 concat_hidden: False
+added_features: 24
 
 activation: "relu"
 
@@ -43,5 +43,5 @@ network:
   checkpoint: ~
 
 features:
-  node: ['area', 'regional_encoding']
+  node: ['Geometric']
   edge: ['distance_not_tresh', 'angle', 'discrete_bin_edges', 'feat']
