--- a/Setups/run90_final.yaml
+++ b/Setups/run90_final.yaml
@@ -3,14 +3,14 @@
 contrastive_learning:
   margin: 0.3
   type_of_triplets: 'all'
-  distance_metric: 'CosineSimilarity'
+  distance_metric: 'LpDistance'
 
-pretrainedWeights: True
+pretrainedWeights: False
 epochs: 200
 batch_size: 4
 loader: True
+added_features: 24
 
-added_features: 2 # The added features to the vector of the nodes. # angle and distance
 model_name: "class_contrastive_model" 
 optimizer: "ADAMW"
 lr: 0.001
@@ -19,14 +19,14 @@ val_size: 0.1
 momentum: 0.9
 weight_decay: 0.0001
 
-schedule_name: "CosineAnnealingLR"
-milestones: [600, 800]
+schedule_name: "MultiStepLR"
+milestones: [100, 160]
 gamma: 0.1
 # Values for the CosineAnnealingLR scheduler
 T_max: 200
 eta_min: 0.00001
 
-Tresh_distance: False
+Tresh_distance: False 
 layers_dimensions: [9, 15, 17]
 dropout: 0.3
 mask_rate: 0.0
