--- a/Setups/run91_hard_cosine.yaml
+++ b/Setups/run91_hard_cosine.yaml
@@ -2,14 +2,15 @@
 
 contrastive_learning:
   margin: 0.3
-  type_of_triplets: 'all'
-  distance_metric: 'LpDistance'
+  type_of_triplets: 'hard'
+  distance_metric: 'CosineSimilarity'
 
 pretrainedWeights: False
 epochs: 200
 batch_size: 4
 loader: True
 
+added_features: 24 # The added features to the vector of the nodes. # angle and distance
 model_name: "class_contrastive_model" 
 optimizer: "ADAMW"
 lr: 0.001
@@ -27,8 +28,6 @@ eta_min: 0.00001
 
 Tresh_distance: False
 layers_dimensions: [9, 15, 17]
-added_features: 20
-
 dropout: 0.3
 mask_rate: 0.0
 concat_hidden: False
@@ -43,5 +42,5 @@ network:
   checkpoint: ~
 
 features:
-  node: ['area', 'regional_encoding']
+  node: ['Geometric']
   edge: ['distance_not_tresh', 'angle', 'discrete_bin_edges', 'feat']
